Issue #1044 - CustomCheckbox; Prevent hover on mobile devices

--- a/assets/scss/molecules/forms/_custom-checkbox.scss
+++ b/assets/scss/molecules/forms/_custom-checkbox.scss
@@ -36,9 +36,12 @@
         }
     }
 
-    &:hover {
-        .checkmark {
-            border-color: $red-2;
+    // Don't trigger hover on tap on iOS
+    @media (hover: hover) and (pointer: fine), (-ms-high-contrast: none), (-ms-high-contrast: active) {
+        &:hover {
+            .checkmark {
+                border-color: $red-2;
+            }
         }
     }
 
@@ -63,11 +66,14 @@
     }
 
     &.radio {
-        &:hover {
-            color: $dark-blue-2;
+        // Don't trigger hover on tap on iOS
+        @media (hover: hover) and (pointer: fine), (-ms-high-contrast: none), (-ms-high-contrast: active) {
+            &:hover {
+                color: $dark-blue-2;
 
-            .checkmark {
-                border-color: $red-2;
+                .checkmark {
+                    border-color: $red-2;
+                }
             }
         }
 
